[tool.poetry]
name = "a5a0664a3815"
version = "0.1.0"
description = ""
authors = ["w00fmeow <w00fmeow@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

click = "^8.1.7"
boto3 = "^1.35.0"
[tool.poetry.scripts]
credentials-extractor = "a5a0664a3815.cli:run"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]  
pytest = "^8.3.2"